--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,39 +13,205 @@
     <!-- <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script> -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
 
+    <!-- <script>
+        alert(document.getElementById("p1").innerHTML);
+
+        function pageOnLoad() {
+            alert(document.getElementById("p1").innerHTML);
+        }
+
+    </script> -->
 
 </head>
+
+<!-- <body onload="pageOnLoad()"> -->
+
 <body>
     <h1>Using jQuery</h1>
 
 
-<!-- ---------- syntax and selectors ------------ -->
+    <!-- ---------- syntax and selectors ------------ -->
 
-<!------------------ 1 ------------------>
-    <p id="p1">First para: this para has ID: "p1" <br>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia illo neque impedit repudiandae alias dignissimos est iusto id tenetur optio culpa minima a facilis aliquam, laborum dicta deserunt esse minus?</p>
+    <!------------------ 1 ------------------>
+    <!-- <p id="p1">First para: this para has ID: "p1" <br>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia illo neque impedit repudiandae alias
+        dignissimos est iusto id tenetur optio culpa minima a facilis aliquam, laborum dicta deserunt esse minus?</p>
 
     <p class="paraf">Second para: this para has CLASS: "paraf" <br>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad cupiditate dolor vero voluptas, nulla dolorum fugiat aliquid rem possimus fuga, consectetur obcaecati veritatis totam odit assumenda, hic voluptatibus repudiandae molestias.</p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad cupiditate dolor vero voluptas, nulla dolorum fugiat
+        aliquid rem possimus fuga, consectetur obcaecati veritatis totam odit assumenda, hic voluptatibus repudiandae
+        molestias.</p>
 
     <p>Third para: this para has NO ATTR.: <br>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad cupiditate dolor vero voluptas, nulla dolorum fugiat aliquid rem possimus fuga, consectetur obcaecati veritatis totam odit assumenda, hic voluptatibus repudiandae molestias.</p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad cupiditate dolor vero voluptas, nulla dolorum fugiat
+        aliquid rem possimus fuga, consectetur obcaecati veritatis totam odit assumenda, hic voluptatibus repudiandae
+        molestias.</p> -->
 
 
-<!------------------ 2 ------------------>
+    <!------------------ 2 ------------------>
 
-        <ul>
-            <li>Lorem ipsum</li>
-            <li>dolor sit </li>
-            <li>amet consectetur</li>
-        </ul>
+    <!-- <ul>
+        <li>Lorem ipsum</li>
+        <li>dolor sit </li>
+        <li>amet consectetur</li>
+    </ul>
 
-        <ul class="list">
-            <li>Lorem ipsum</li>
-            <li>dolor sit </li>
-            <li>amet consectetur</li>
-        </ul>
+    <ul class="list">
+        <li>Lorem ipsum</li>
+        <li>dolor sit </li>
+        <li>amet consectetur</li>
+    </ul> -->
 
+
+
+    <!------------------ Effects ------------------>
+    <!------------------ 1 ------------------>
+
+    <!-- <button id="hide">Hide</button>
+    <button id="show">Show</button>
+
+    <hr> -->
+
+    <!-- p*3>lorem11 -->
+
+    <!-- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis.</p>
+
+    <p>Nam soluta neque consequuntur totam quidem pariatur cumque mollitia!</p>
+
+    <p>Tempore in officiis temporibus culpa maxime placeat perspiciatis doloribus?</p> -->
+
+
+    <!------------------ 2 ------------------>
+
+    <!-- <button id="hide">Hide</button>
+    <button id="show">Show</button>
+    <button id="toggle">Toggle</button>
+
+    <hr>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis.</p>
+
+    <p>Nam soluta neque consequuntur totam quidem pariatur cumque mollitia!</p>
+
+    <p>Tempore in officiis temporibus culpa maxime placeat perspiciatis doloribus?</p> -->
+
+
+    <!------------------ 3 ------------------>
+
+    <!-- <button id="fadein">Fade In</button>
+    <button id="fadeout">Fade Out</button>
+    <button id="fadetoggle">Fade Toggle</button>
+
+    <hr>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis.</p>
+
+    <p>Nam soluta neque consequuntur totam quidem pariatur cumque mollitia!</p>
+
+    <p>Tempore in officiis temporibus culpa maxime placeat perspiciatis doloribus?</p> -->
+
+
+    <!------------------ 4 ------------------>
+
+    <!-- <button id="slideup">Slide Up</button>
+   <button id="slidedown">Slide Down</button>
+   <button id="slidetoggle">Slide Toggle</button>
+
+   <hr>
+
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis.</p>
+
+   <p>Nam soluta neque consequuntur totam quidem pariatur cumque mollitia!</p>
+
+   <p>Tempore in officiis temporibus culpa maxime placeat perspiciatis doloribus?</p> -->
+
+
+    <!------------------ 5 animate ------------------>
+
+    <!-- <button id="animate">Animate</button>
+
+<hr>
+
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis.</p>
+
+<p>Nam soluta neque consequuntur totam quidem pariatur cumque mollitia!</p>
+
+<p>Tempore in officiis temporibus culpa maxime placeat perspiciatis doloribus?</p> -->
+
+
+
+    <!------------------ 6 ------------------>
+
+    <!-- <button id="hide">Hide</button>
+    <button id="show">Show</button>
+    <button id="toggle">Toggle</button>
+    <button id="stop">Stop Animation</button>
+
+    <hr>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis.</p>
+
+    <p>Nam soluta neque consequuntur totam quidem pariatur cumque mollitia!</p>
+
+    <p>Tempore in officiis temporibus culpa maxime placeat perspiciatis doloribus?</p> -->
+
+
+
+    <!------------------ Get/Set methods ------------------>
+    <!------------------ 1 Get Methods ------------------>
+
+
+    <!-- <button id="btnGetHtml">Get HTML</button>
+    <button id="btnGetText">Get Text</button>
+    <button id="btnGetValue">Get Value</button>
+    <hr>
+
+    <p>
+        <b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Veniam, voluptatem dignissimos. Voluptas aut
+        aspernatur
+        unde?
+    </p>
+
+    <input type="text" name="" id="" value=""> -->
+
+
+
+    <!------------------ 2 Set Methods ------------------>
+
+
+    <!-- <button id="btnGetHtml">Get HTML</button>
+    <button id="btnGetText">Get Text</button>
+    <button id="btnGetValue">Get Value</button>
+    <hr>
+    <button id="btnSetHtml">Set HTML</button>
+    <button id="btnSetText">Set Text</button>
+    <button id="btnSetValue">Set Value</button>
+    <hr>
+
+    <select id="cities">
+        <option value="06">Ankara</option>
+        <option value="34">İstanbul</option>
+        <option value="35">İzmir</option>
+    </select>
+
+    <button id="btnGetCity">Get Selected City</button>
+
+    <p>
+        <b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Veniam, voluptatem dignissimos. Voluptas aut
+        aspernatur
+        unde?
+    </p>
+
+    <input type="text" name="" id="" value="">
+
+    <input type="radio" name="gender" value="man"><span>Man</span>
+    <input type="radio" name="gender" value="woman"><span>Women</span>
+    <button id="btnGetGender">Get Gender</button> -->
+
+
+
+
+    <!------------------ Add/Remove Methods ------------------>
 
 
 
@@ -54,4 +221,5 @@
     <script src="app.js"></script>
 
 </body>
+
 </html>
