--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
 
     </script> -->
 
+    <!-- <style>
+        .green {
+            color: green;
+            font-style: italic;
+        }
+
+        .red {
+            background-color: red;
+        }
+    </style> -->
+
 </head>
 
 <!-- <body onload="pageOnLoad()"> -->
@@ -212,6 +223,127 @@
 
 
     <!------------------ Add/Remove Methods ------------------>
+    <!------------------ Append/Prepend ------------------>
+
+    <!-- <h3>Todo List</h3> 
+    <br>
+    <input type="text" id="todoText" placeholder="todo text">
+    <hr>
+    <button id="btnAppend">Add to End</button>
+    <button id="btnPrepend">Add to Beginning</button>
+    <hr>
+    <ul id="todoList">
+    </ul> -->
+
+    <!------------------ Before/After ------------------>
+
+    <!-- <h3>Todo List</h3> 
+    <br>
+    <input type="text" id="todoText" placeholder="todo text">
+    <hr>
+    <button id="btnAddBefore">Add Before</button>
+    <button id="btnAddAfter">Add After</button>
+    <hr>
+    <ul id="todoList">
+        <li id="item1">Lorem, ipsum dolor.</li>
+        <li id="item2">Lorem, ipsum dolor.</li>
+        <li id="item3">Lorem, ipsum dolor.</li>
+    </ul> -->
+
+
+    <!------------------- Class&CSS Addings ------------------->
+
+    <!-- <style>
+        .green {
+            color: green;
+            font-style: italic;
+        }
+
+        .red {
+            background-color: red;
+        }
+    </style>
+
+
+    <button id="btnAddClass">Add Class</button>
+    <button id="btnRemoveClass">Remove Class</button>
+    <button id="btnToggleClass">Toggle Class</button>
+    <button id="btnCss">Custom CSS</button>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit fuga id odio aliquam voluptates. Accusantium alias
+        excepturi libero numquam, eligendi soluta, possimus explicabo beatae doloremque ducimus provident! Facere,
+        tempora deleniti!</p> -->
+
+
+
+    <!-------------------Traversing ------------------->
+    <!-- 
+    <style>
+        .bold {
+            font-weight: bold;
+        }
+
+        .italic {
+            font-style: italic;
+        }
+
+        .underline {
+            text-decoration: underline;
+        }
+
+        .color {
+            color: aqua;
+        }
+
+        .bg {
+            background-color: darkslateblue;
+        }
+
+        .list-item {
+            border: 2px dashed darkgray;
+            padding: 5px;
+            margin: 3px;
+        }
+
+        ul {
+            list-style-type: none;
+        }
+
+        li {
+            width: 200px;
+            cursor: pointer;
+        }
+    </style>
+
+
+    <button type="button">Reset</button>
+    <hr>
+
+    <ul id="options">
+        <li>Bold</li>
+        <li>Italic</li>
+        <li>Underline</li>
+        <li>Color</li>
+        <li>Background</li>
+    </ul> -->
+
+
+
+    <!------------------- Ajax Calls ------------------->
+
+    <button id="btnLoadData">Load Data</button>
+
+    <ul id="list">
+
+    </ul>
+
+
+
+
+
+
+
+
 
 
 
